--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@gxl/react-scripts": "2.2.5",
+    "classnames": "^2.2.6",
+    "immer": "^1.8.0",
     "react": "^16.7.0-alpha.2",
     "react-dom": "^16.7.0-alpha.2"
   },
