--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "classnames": "^2.2.6",
     "immer": "^1.8.0",
     "react": "^16.7.0-alpha.2",
+    "react-color": "^2.14.1",
     "react-dom": "^16.7.0-alpha.2"
   },
   "scripts": {
