--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "immer": "^1.8.0",
     "react": "^16.7.0-alpha.2",
     "react-color": "^2.14.1",
-    "react-dom": "^16.7.0-alpha.2"
+    "react-dom": "^16.7.0-alpha.2",
+    "node-sass": "4.12.0"
   },
   "scripts": {
     "start": "react-scripts start",
